--- a/movie/templates/signup.html
+++ b/movie/templates/signup.html
@@ -24,6 +24,7 @@
                     <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign Up</button>
+                <a href="{% url 'login' %}" class="btn btn-secondary">Back</a>
             </form>
         </div>
     </div>
