--- a/movie/templates/base1.html
+++ b/movie/templates/base1.html
@@ -3,16 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Base{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/base1.css' %}">
     <style>
         /* Add some basic styling */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #141414;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+        header {
+            background-color: #111;
+            padding: 20px;
+            text-align: center;
+        }
+        header ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        header ul li {
+            margin: 0 15px;
+        }
+        header ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        main {
+            flex: 1;
+            padding: 20px;
+        }
+        footer {
+            background-color: #111;
+            text-align: center;
+            padding: 10px 0;
+        }
         .movie-card {
             margin: 10px;
-            padding: 10px;
+            padding: 20px;
             border: 1px solid #ccc;
             display: inline-block;
             width: 200px;
+            height: 300px;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
+            color: #fff;
         }
-        .movie-card a {
+        .movie-details {
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            position: absolute;
+            bottom: 40px;
+            left: 0;
+            width: 93%;
+            text-align: center;
+            height: 80px;
+            align-items: center;
+        }
+        .add-to-cart {
+            display: block;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            text-decoration: none;
+        }
+        .pagination {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .pagination a {
+            color: #fff;
+            margin: 0 5px;
             text-decoration: none;
             color: black;
         }
@@ -25,15 +100,20 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgba(0,0,0,0.4);
+            background-color: rgba(0,0,0,0.9);
         }
         .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
+            background-color: #222;
+            margin: 10% auto;
             padding: 20px;
             border: 1px solid #888;
-            width: 80%;
+            width: 50%;
             text-align: center;
+            border-radius: 10px;
+        }
+        .modal-content img {
+            width: 100%;
+            border-radius: 5px;
         }
         .close-modal {
             color: #aaa;
@@ -43,7 +123,7 @@
         }
         .close-modal:hover,
         .close-modal:focus {
-            color: black;
+            color: #fff;
             text-decoration: none;
             cursor: pointer;
         }
