--- a/movie/templates/signin.html
+++ b/movie/templates/signin.html
@@ -16,6 +16,7 @@
                     <input type="password" class="form-control" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign In</button>
+                <a href="{% url 'login' %}" class="btn btn-secondary">Back</a>
             </form>
         </div>
     </div>
