--- a/movie/templates/base1.html
+++ b/movie/templates/base1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Base{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/base1.css' %}">
@@ -89,7 +90,7 @@
             color: #fff;
             margin: 0 5px;
             text-decoration: none;
-            color: black;
+            
         }
         .modal {
             display: none;
