--- a/movie/templates/footer.html
+++ b/movie/templates/footer.html
@@ -1,3 +1,5 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <footer class="footer">
     <div class="container">
         <div class="row">
