--- a/movie/templates/header.html
+++ b/movie/templates/header.html
@@ -1,5 +1,6 @@
 {% load static %}
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <header class="header">
     <div class="container">
         <div class="row">
