--- a/movie/templates/user_settings.html
+++ b/movie/templates/user_settings.html
@@ -7,30 +7,30 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f8f9fa;
+            background-color: #000;
             margin: 0;
             padding: 0;
         }
         .profile-container {
             max-width: 800px;
             margin: 50px auto;
-            background-color: #fff;
+            background-color: #000;
             padding: 30px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
         .profile-container h2 {
             text-align: center;
-            color: #333;
+            color: #fff;
             margin-bottom: 20px;
         }
         .profile-container form {
             display: flex;
             flex-direction: column;
         }
-        .profile-container label {
+        .profile-container label {  
             margin: 10px 0 5px;
-            color: #555;
+            color: #c9c7c7;
         }
         .profile-container input,
         .profile-container textarea {
@@ -78,7 +78,7 @@
         }
         .purchase-history h3 {
             text-align: center;
-            color: #333;
+            color: #f0e7e7;
             margin-bottom: 20px;
         }
         .purchase-history table {
@@ -89,9 +89,11 @@
             padding: 10px;
             border: 1px solid #ddd;
             text-align: left;
+            color: #fff;
         }
         .purchase-history th {
             background-color: #f2f2f2;
+            color: #000;
         }
     </style>
 </head>
