--- a/movie/templates/pay.html
+++ b/movie/templates/pay.html
@@ -9,21 +9,21 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f8f9fa;
+            background-color: #0a0000;
             margin: 0;
             padding: 0;
         }
         .container {
             max-width: 800px;
             margin: 50px auto;
-            background-color: #fff;
+            background-color: #000;
             padding: 20px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
         h2 {
             text-align: center;
-            color: #333;
+            color: #fff;
         }
         .movies-container {
             display: flex;
